added the ability to return string's, Stream's and IStreamWriter.cs to send back arbitrary xml, or binary streams back to the response

--- a/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationContext.cs" />
+    <Compile Include="BasicApplicationContext.cs" />
+    <Compile Include="BasicOperationContext.cs" />
     <Compile Include="PortResolver.cs" />
     <Compile Include="Session\IUserSessionManager.cs" />
     <Compile Include="ZeroConfigServiceResolver.cs" />
