--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Extensions\ITranslatorExtensions.cs" />
+    <Compile Include="Extensions\StreamExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Support\AdapterBase.cs" />
     <Compile Include="Support\LogicFacadeBase.cs" />
