--- a/trunk/Common/ServiceStack.ServiceModel/ServiceStack.Model.csproj
+++ b/trunk/Common/ServiceStack.ServiceModel/ServiceStack.Model.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{982416DB-C143-4028-A0C3-CF41892D18D3}</ProjectGuid>
+    <ProjectGuid>{514F7569-5C72-47DD-B87A-B46A78C04F62}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceStack.Common</RootNamespace>
-    <AssemblyName>ServiceStack.Common</AssemblyName>
+    <RootNamespace>ServiceStack.Model</RootNamespace>
+    <AssemblyName>ServiceStack.Model</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,46 +31,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Build\ServiceStack.Interfaces.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expressions\DelegateFactory.cs" />
-    <Compile Include="Extensions\ActionExecExtensions.cs" />
-    <Compile Include="Extensions\ExecExtensions.cs" />
-    <Compile Include="Extensions\DictionaryExtensions.cs" />
-    <Compile Include="Extensions\DisposableExtensions.cs" />
-    <Compile Include="Extensions\EnumExtensions.cs" />
-    <Compile Include="Extensions\IEnumerableExtensions.cs" />
-    <Compile Include="Extensions\ITranslatorExtensions.cs" />
-    <Compile Include="Extensions\ObjectExtensions.cs" />
-    <Compile Include="Extensions\StreamExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="PathInfo.cs" />
-    <Compile Include="Support\ActionExecHandler.cs" />
-    <Compile Include="Support\AdapterBase.cs" />
-    <Compile Include="Support\LogicFacadeBase.cs" />
-    <Compile Include="Support\CommandProcessor.cs" />
-    <Compile Include="Utils\AssemblyUtils.cs" />
-    <Compile Include="Utils\AssertUtils.cs" />
-    <Compile Include="Utils\CommandsUtils.cs" />
-    <Compile Include="Utils\ObjectDumperUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\PathUtils.cs" />
-    <Compile Include="Utils\ReflectionUtils.cs" />
-    <Compile Include="Utils\StringConverterUtils.cs" />
-    <Compile Include="Support\CommandExecsHandler.cs" />
-    <Compile Include="Support\CommandResultsHandler.cs" />
-    <Compile Include="Support\TypeDefinition.cs" />
-    <Compile Include="UrnId.cs" />
+    <Compile Include="Version100\ResponseStatus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
