--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Console/ServiceStack.Examples.Host.Console.csproj
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Console/ServiceStack.Examples.Host.Console.csproj
@@ -63,6 +63,9 @@
       <Name>ServiceStack.Examples.ServiceInterface</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
