--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientBin\ServiceStack.Examples.Clients.Silverlight.xap" />
+    <Content Include="default.css" />
     <Content Include="jquery-1.3.2.min.js" />
     <Content Include="Silverlight.htm" />
     <Content Include="Default.aspx" />
