--- a/ServiceStack.Examples/ServiceStack.Examples.Clients/Web.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Clients/Web.config
@@ -48,6 +48,8 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
+		<customErrors mode="Off"/>
+		
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
