--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
@@ -51,9 +51,9 @@
             The <authentication> section enables configuration 
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
+			<authentication mode="Windows"/>
         -->
-		<authentication mode="Windows"/>
-		<!--
+			<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
             during the execution of a request. Specifically,  
@@ -65,6 +65,7 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
+		<customErrors mode="Off"/>
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
