--- a/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Content Include="ClientBin\ServiceStack.Examples.Clients.Silverlight.xap" />
     <Content Include="default.css" />
+    <Content Include="Flash.htm" />
     <Content Include="jquery-1.3.2.min.js" />
     <Content Include="Silverlight.htm" />
     <Content Include="Default.aspx" />
