--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
@@ -77,6 +77,19 @@
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
+
+			<add path="Public/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.IndexMetadataHandler, ServiceStack" verb="*" validate="false" />
+			<add path="Public/Soap11/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap11/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11MetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap12/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Soap12/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/SyncReply" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/SyncReply" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" />
+
 		</httpHandlers>
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -94,6 +107,8 @@
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
+	<!--[ServiceStack Specific]: Enable all endpoints handlers that you want available to handle your request -->
+	<!-- IIS 7.0 handlers not supported by mono
 	<system.webServer>
 		<validation validateIntegratedModeConfiguration="false"/>
 		<modules>
@@ -109,20 +124,20 @@
 			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 		
-			<!--[ServiceStack Specific]: Enable all endpoints handlers that you want available to handle your request -->
-			<add name="Endpoints.Index" path="Public/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.IndexMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap11.Wsdl" path="Public/Soap11/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11WsdlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap11.Metadata" path="Public/Soap11/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11MetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap12.Wsdl" path="Public/Soap12/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Soap12.Metadata" path="Public/Soap12/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.Metadata" path="Public/Xml/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.AsyncOneWay" path="Public/Xml/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Xml.SyncReply" path="Public/Xml/SyncReply" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.Metadata" path="Public/Json/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.AsyncOneWay" path="Public/Json/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
-			<add name="Json.SyncReply" path="Public/Json/SyncReply" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
+			<add name="Endpoints.Index" path="Public/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.IndexMetadataHandler, ServiceStack" verb="*" />
+			<add name="Soap11.Wsdl" path="Public/Soap11/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add name="Soap11.Metadata" path="Public/Soap11/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap11MetadataHandler, ServiceStack" verb="*" />
+			<add name="Soap12.Wsdl" path="Public/Soap12/Wsdl" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" />
+			<add name="Soap12.Metadata" path="Public/Soap12/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" />
+			<add name="Xml.Metadata" path="Public/Xml/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" />
+			<add name="Xml.AsyncOneWay" path="Public/Xml/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add name="Xml.SyncReply" path="Public/Xml/SyncReply" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" />
+			<add name="Json.Metadata" path="Public/Json/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" />
+			<add name="Json.AsyncOneWay" path="Public/Json/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add name="Json.SyncReply" path="Public/Json/SyncReply" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" />
 		</handlers>
 	</system.webServer>
+	-->
 
 	<!--[ServiceStack Specific]: Enable all Soap 1.1 and Soap 1.2 WCF bindings. Endpoints at Public/Soap11/*.svc and Public/Soap12/*.svc -->
 	<system.serviceModel>
