--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Mono.Web.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Mono.Web.config
@@ -84,11 +84,11 @@
 			<add path="Public/Soap12/Wsdl*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12WsdlMetadataHandler, ServiceStack" verb="*" />
 			<add path="Public/Soap12/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.Soap12MetadataHandler, ServiceStack" verb="*" />
 			<add path="Public/Xml/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.XmlMetadataHandler, ServiceStack" verb="*" />
-			<add path="Public/Xml/AsyncOneWay*" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" />
-			<add path="Public/Xml/SyncReply*" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/AsyncOneWay/*" type="ServiceStack.WebHost.Endpoints.XmlAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Xml/SyncReply/*" type="ServiceStack.WebHost.Endpoints.XmlSyncReplyHandler, ServiceStack" verb="*" />
 			<add path="Public/Json/Metadata*" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" />
-			<add path="Public/Json/AsyncOneWay*" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" />
-			<add path="Public/Json/SyncReply*" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/AsyncOneWay/*" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" />
+			<add path="Public/Json/SyncReply/*" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" />
 
 		</httpHandlers>
 		<httpModules>
