--- a/Common/ServiceStack.Common/ServiceStack.ServiceClient.Web/ServiceStack.ServiceClient.Web.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.ServiceClient.Web/ServiceStack.ServiceClient.Web.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
