--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Console/App.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Console/App.config
@@ -17,6 +17,7 @@
 	</objects>
 
 	<appSettings>
+		<add key="ListenBaseUrl" value="http://localhost:81/"/>
 		<add key="Db4oConnectionString" value="~/App_data/exampledb.db4o"/>
 		<add key="ServiceName" value="ServiceStack 'Console Host' Examples"/>
 		<add key="DefaultFibonacciLimit" value="10"/>
