--- a/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
@@ -58,6 +58,7 @@
     <Content Include="ClientBin\ServiceStack.Examples.Clients.Silverlight.xap" />
     <Content Include="default.css" />
     <Content Include="Flash.htm" />
+    <Content Include="img\Tango-feet.png" />
     <Content Include="jquery-1.3.2.min.js" />
     <Content Include="Silverlight.htm" />
     <Content Include="Default.aspx" />
