--- a/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
@@ -56,7 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetAllUsersHandler.cs" />
     <Compile Include="StoreNewUserHandler.cs" />
+    <Compile Include="Types\GetAllUsers.cs" />
     <Compile Include="Types\DeleteAllUsers.cs" />
     <Compile Include="DeleteAllUsersHandler.cs" />
     <Compile Include="GetFactorialHandler.cs" />
