--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Console/App.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Console/App.config
@@ -17,8 +17,9 @@
 	</objects>
 
 	<appSettings>
+		<add key="PerformTestsOnInit" value="true"/>
 		<add key="ListenBaseUrl" value="http://localhost:81/"/>
-		<add key="Db4oConnectionString" value="~/App_data/exampledb.db4o"/>
+		<add key="Db4oConnectionString" value="~/App_Data/exampledb.db4o"/>
 		<add key="ServiceName" value="ServiceStack 'Console Host' Examples"/>
 		<add key="DefaultFibonacciLimit" value="10"/>
 	</appSettings>
