--- a/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
+++ b/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
@@ -27,7 +27,7 @@
 		-->
 	</objects>
 	<appSettings>
-		<add key="Db4oConnectionString" value="~/App_data/exampledb.db4o"/>
+		<add key="Db4oConnectionString" value="~/App_Data/exampledb.db4o"/>
 		<add key="ServiceName" value="ServiceStack Examples"/>
 		<add key="DefaultFibonacciLimit" value="10"/>
 	</appSettings>
