--- a/Common/ServiceStack.Interfaces/ServiceStack.CacheAccess/ServiceStack.CacheAccess.csproj
+++ b/Common/ServiceStack.Interfaces/ServiceStack.CacheAccess/ServiceStack.CacheAccess.csproj
@@ -32,9 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICacheClient.cs" />
+    <Compile Include="ICacheManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
