--- a/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.Clients/ServiceStack.Examples.Clients.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientBin\ServiceStack.Examples.Clients.Silverlight.xap" />
+    <Content Include="Default.aspx" />
     <Content Include="default.css" />
     <Content Include="Flash.htm" />
     <Content Include="img\Mono-powered-big.png" />
@@ -72,6 +73,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
