--- a/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment.cs" />
     <Compile Include="Expressions\DelegateFactory.cs" />
     <Compile Include="Extensions\ActionExecExtensions.cs" />
     <Compile Include="Extensions\ExecExtensions.cs" />
