--- a/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -61,6 +61,8 @@
     <Compile Include="ReflectionUtilTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\InvokeSimpleCommandsTests.cs" />
+    <Compile Include="Support\ModelWithFieldsOfDifferentTypes.cs" />
+    <Compile Include="Support\ModelWithOnlyStringFields.cs" />
     <Compile Include="Support\PathInfoTests.cs" />
   </ItemGroup>
   <ItemGroup>
